--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,11 @@ project(CompileTimeEncryption)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
+option(ENCRYPT_STRINGS "Encrypt all strings" ON)
+if (ENCRYPT_STRINGS)
+    add_definitions(-CTE_ENCRYPTSTRINGS=1)
+endif()
+
 add_library(CompileTimeEncryption INTERFACE)
 
 target_include_directories(CompileTimeEncryption
